--- a/swiftgen.yml
+++ b/swiftgen.yml
@@ -20,3 +20,8 @@ colors:
     outputs:
         templateName: swift4
         output: AppColor.swift
+strings:
+    inputs: Supporting Files/Localizable/en.lproj/Localizable.strings
+    outputs:
+        templatePath: iOS_Starter/Resource/structured-swift4.stencil
+        output: AppStrings.swift
