--- a/iOStarter/Supporting Files/Info.plist
+++ b/iOStarter/Supporting Files/Info.plist
@@ -39,6 +39,10 @@
 		<string>Proxima Nova Thin.otf</string>
 		<string>ProximaNova-Regular.otf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
