--- a/Settings.bundle/com.ios.starter.LicensePlist/KYDrawerController.plist
+++ b/Settings.bundle/com.ios.starter.LicensePlist/KYDrawerController.plist
@@ -8,7 +8,7 @@
 			<key>FooterText</key>
 			<string>The MIT License (MIT)
 
-Copyright (c) 2019 Wei Wang
+Copyright (c) 2015 kyo__hei
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
