--- a/Settings.bundle/com.ios.starter.LicensePlist.plist
+++ b/Settings.bundle/com.ios.starter.LicensePlist.plist
@@ -28,6 +28,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.ios.starter.LicensePlist/CryptoSwift</string>
+			<key>Title</key>
+			<string>CryptoSwift (1.3.8)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.ios.starter.LicensePlist/Firebase</string>
 			<key>Title</key>
 			<string>Firebase (7.6.0)</string>
