--- a/iOStarter/Supporting Files/Info.plist
+++ b/iOStarter/Supporting Files/Info.plist
@@ -46,7 +46,7 @@
 		<string>armv7</string>
 	</array>
 	<key>UIRequiresFullScreen</key>
-	<true/>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
