--- a/Settings.bundle/com.iOStarter.LicensePlist.plist
+++ b/Settings.bundle/com.iOStarter.LicensePlist.plist
@@ -14,7 +14,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/Alamofire</string>
 			<key>Title</key>
-			<string>Alamofire (5.5.0)</string>
+			<string>Alamofire (5.6.1)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -22,7 +22,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/CryptoSwift</string>
 			<key>Title</key>
-			<string>CryptoSwift (1.4.3)</string>
+			<string>CryptoSwift (1.5.1)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -30,7 +30,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/Firebase</string>
 			<key>Title</key>
-			<string>Firebase (8.14.0)</string>
+			<string>Firebase (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -38,7 +38,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseABTesting</string>
 			<key>Title</key>
-			<string>FirebaseABTesting (8.14.0)</string>
+			<string>FirebaseABTesting (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -46,7 +46,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseAnalytics</string>
 			<key>Title</key>
-			<string>FirebaseAnalytics (8.14.0)</string>
+			<string>FirebaseAnalytics (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -54,7 +54,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseCore</string>
 			<key>Title</key>
-			<string>FirebaseCore (8.14.0)</string>
+			<string>FirebaseCore (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -62,7 +62,15 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseCoreDiagnostics</string>
 			<key>Title</key>
-			<string>FirebaseCoreDiagnostics (8.14.0)</string>
+			<string>FirebaseCoreDiagnostics (9.2.0)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.iOStarter.LicensePlist/FirebaseCoreInternal</string>
+			<key>Title</key>
+			<string>FirebaseCoreInternal (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -70,7 +78,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseCrashlytics</string>
 			<key>Title</key>
-			<string>FirebaseCrashlytics (8.14.0)</string>
+			<string>FirebaseCrashlytics (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -78,7 +86,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseInstallations</string>
 			<key>Title</key>
-			<string>FirebaseInstallations (8.14.0)</string>
+			<string>FirebaseInstallations (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -86,7 +94,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseMessaging</string>
 			<key>Title</key>
-			<string>FirebaseMessaging (8.14.0)</string>
+			<string>FirebaseMessaging (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -94,7 +102,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebasePerformance</string>
 			<key>Title</key>
-			<string>FirebasePerformance (8.14.0)</string>
+			<string>FirebasePerformance (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -102,7 +110,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseRemoteConfig</string>
 			<key>Title</key>
-			<string>FirebaseRemoteConfig (8.14.0)</string>
+			<string>FirebaseRemoteConfig (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -110,7 +118,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/GoogleAppMeasurement</string>
 			<key>Title</key>
-			<string>GoogleAppMeasurement (8.14.0)</string>
+			<string>GoogleAppMeasurement (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -118,7 +126,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/GoogleDataTransport</string>
 			<key>Title</key>
-			<string>GoogleDataTransport (9.1.2)</string>
+			<string>GoogleDataTransport (9.1.4)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -142,7 +150,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/IQKeyboardManagerSwift</string>
 			<key>Title</key>
-			<string>IQKeyboardManagerSwift (6.5.9)</string>
+			<string>IQKeyboardManagerSwift (6.5.10)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -150,7 +158,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/Kingfisher</string>
 			<key>Title</key>
-			<string>Kingfisher (7.2.0)</string>
+			<string>Kingfisher (7.2.4)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -158,7 +166,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/L10n-swift</string>
 			<key>Title</key>
-			<string>L10n-swift (5.10.0)</string>
+			<string>L10n-swift (5.10.2)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -166,7 +174,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/LicensePlist</string>
 			<key>Title</key>
-			<string>License Plist (3.20.0)</string>
+			<string>License Plist (3.22.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -174,7 +182,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/Lightbox</string>
 			<key>Title</key>
-			<string>Lightbox (2.6.0)</string>
+			<string>Lightbox (2.6.1)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -198,7 +206,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/nanopb</string>
 			<key>Title</key>
-			<string>nanopb (2.30908.0)</string>
+			<string>nanopb (2.30909.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -214,7 +222,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/PromisesObjC</string>
 			<key>Title</key>
-			<string>PromisesObjC (2.0.0)</string>
+			<string>PromisesObjC (2.1.1)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
