--- a/Settings.bundle/com.iOStarter.LicensePlist/CryptoSwift.plist
+++ b/Settings.bundle/com.iOStarter.LicensePlist/CryptoSwift.plist
@@ -18,6 +18,8 @@ Permission is granted to anyone to use this software for any purpose,including c
 - This notice may not be removed or altered from any source or binary distribution.
 - Redistributions of any form whatsoever must retain the following acknowledgment: 'This product includes software developed by the "Marcin Krzyzanowski" (http://krzyzanowskim.com/).'
 </string>
+			<key>License</key>
+			<string>unknown</string>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 		</dict>
