--- a/Settings.bundle/com.iOStarter.LicensePlist.plist
+++ b/Settings.bundle/com.iOStarter.LicensePlist.plist
@@ -14,7 +14,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/Alamofire</string>
 			<key>Title</key>
-			<string>Alamofire (5.6.1)</string>
+			<string>Alamofire (5.6.4)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -22,7 +22,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/CryptoSwift</string>
 			<key>Title</key>
-			<string>CryptoSwift (1.5.1)</string>
+			<string>CryptoSwift (1.6.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -30,7 +30,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/Firebase</string>
 			<key>Title</key>
-			<string>Firebase (9.2.0)</string>
+			<string>Firebase (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -38,7 +38,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseABTesting</string>
 			<key>Title</key>
-			<string>FirebaseABTesting (9.2.0)</string>
+			<string>FirebaseABTesting (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -46,7 +46,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseAnalytics</string>
 			<key>Title</key>
-			<string>FirebaseAnalytics (9.2.0)</string>
+			<string>FirebaseAnalytics (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -54,15 +54,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseCore</string>
 			<key>Title</key>
-			<string>FirebaseCore (9.2.0)</string>
-			<key>Type</key>
-			<string>PSChildPaneSpecifier</string>
-		</dict>
-		<dict>
-			<key>File</key>
-			<string>com.iOStarter.LicensePlist/FirebaseCoreDiagnostics</string>
-			<key>Title</key>
-			<string>FirebaseCoreDiagnostics (9.2.0)</string>
+			<string>FirebaseCore (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -70,7 +62,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseCoreInternal</string>
 			<key>Title</key>
-			<string>FirebaseCoreInternal (9.2.0)</string>
+			<string>FirebaseCoreInternal (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -78,7 +70,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseCrashlytics</string>
 			<key>Title</key>
-			<string>FirebaseCrashlytics (9.2.0)</string>
+			<string>FirebaseCrashlytics (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -86,7 +78,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseInstallations</string>
 			<key>Title</key>
-			<string>FirebaseInstallations (9.2.0)</string>
+			<string>FirebaseInstallations (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -94,7 +86,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseMessaging</string>
 			<key>Title</key>
-			<string>FirebaseMessaging (9.2.0)</string>
+			<string>FirebaseMessaging (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -102,7 +94,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebasePerformance</string>
 			<key>Title</key>
-			<string>FirebasePerformance (9.2.0)</string>
+			<string>FirebasePerformance (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -110,7 +102,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/FirebaseRemoteConfig</string>
 			<key>Title</key>
-			<string>FirebaseRemoteConfig (9.2.0)</string>
+			<string>FirebaseRemoteConfig (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -118,7 +110,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/GoogleAppMeasurement</string>
 			<key>Title</key>
-			<string>GoogleAppMeasurement (9.2.0)</string>
+			<string>GoogleAppMeasurement (10.3.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -126,7 +118,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/GoogleDataTransport</string>
 			<key>Title</key>
-			<string>GoogleDataTransport (9.1.4)</string>
+			<string>GoogleDataTransport (9.2.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -134,7 +126,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/GoogleUtilities</string>
 			<key>Title</key>
-			<string>GoogleUtilities (7.7.0)</string>
+			<string>GoogleUtilities (7.10.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -142,7 +134,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/iOStarter</string>
 			<key>Title</key>
-			<string>iOStarter (1.3.0)</string>
+			<string>iOStarter (1.5.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -158,7 +150,15 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/Kingfisher</string>
 			<key>Title</key>
-			<string>Kingfisher (7.2.4)</string>
+			<string>Kingfisher (7.4.1)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.iOStarter.LicensePlist/KMPlaceholderTextView</string>
+			<key>Title</key>
+			<string>KMPlaceholderTextView (1.4.0)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -174,7 +174,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/LicensePlist</string>
 			<key>Title</key>
-			<string>License Plist (3.22.0)</string>
+			<string>License Plist (3.23.4)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -188,9 +188,25 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.iOStarter.LicensePlist/MaterialComponents</string>
+			<key>Title</key>
+			<string>MaterialComponents (124.2.0)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.iOStarter.LicensePlist/MDFInternationalization</string>
+			<key>Title</key>
+			<string>MDFInternationalization (3.0.0)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.iOStarter.LicensePlist/MMKV</string>
 			<key>Title</key>
-			<string>MMKV (1.2.13)</string>
+			<string>MMKV (1.2.14)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -198,7 +214,7 @@
 			<key>File</key>
 			<string>com.iOStarter.LicensePlist/MMKVCore</string>
 			<key>Title</key>
-			<string>MMKVCore (1.2.13)</string>
+			<string>MMKVCore (1.2.14)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
@@ -228,9 +244,25 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.iOStarter.LicensePlist/Reusable</string>
+			<key>Title</key>
+			<string>Reusable (4.1.2)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.iOStarter.LicensePlist/SwiftGen</string>
 			<key>Title</key>
-			<string>SwiftGen (6.5.1)</string>
+			<string>SwiftGen (6.6.2)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.iOStarter.LicensePlist/SwiftNotificationCenter</string>
+			<key>Title</key>
+			<string>SwiftNotificationCenter (1.0.4)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
