--- a/Settings.bundle/com.iOStarter.LicensePlist/KMPlaceholderTextView.plist
+++ b/Settings.bundle/com.iOStarter.LicensePlist/KMPlaceholderTextView.plist
@@ -6,9 +6,9 @@
 	<array>
 		<dict>
 			<key>FooterText</key>
-			<string>MIT Licence
+			<string>The MIT License (MIT)
 
-Copyright (c) 2022 SwiftGen
+Copyright (c) 2016 Zhouqi Mo (https://github.com/MoZhouqi)
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -26,8 +26,7 @@ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
-</string>
+SOFTWARE.</string>
 			<key>License</key>
 			<string>MIT</string>
 			<key>Type</key>
