--- a/Settings.bundle/com.iOStarter.LicensePlist/Reusable.plist
+++ b/Settings.bundle/com.iOStarter.LicensePlist/Reusable.plist
@@ -6,9 +6,9 @@
 	<array>
 		<dict>
 			<key>FooterText</key>
-			<string>MIT Licence
+			<string>The MIT License (MIT)
 
-Copyright (c) 2022 SwiftGen
+Copyright (c) 2016 AliSoftware
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
